Bug 299484 - Kexi crashes on app closing
Summary: Kexi crashes on app closing
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: General (other bugs)
Version First Reported In: 2.4.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Jarosław Staniek
URL:
Keywords:
: 298855 300570 302280 305605 305753 306140 311278 316445 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-05-06 08:24 UTC by Donatas Glodenis
Modified: 2013-03-10 09:47 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5.3
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (3.96 KB, text/plain)
2012-05-08 19:15 UTC, Donatas Glodenis
Details
The database that I was working on when the second crash happened. (12.00 KB, application/x-kexiproject-sqlite)
2012-05-08 19:25 UTC, Donatas Glodenis
Details
New crash information added by DrKonqi (6.23 KB, text/plain)
2012-12-13 16:38 UTC, vajs.vajs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Donatas Glodenis 2012-05-06 08:24:40 UTC
Application: kexi (2.4.0 (Calligra 2.4.0))
KDE Platform Version: 4.8.2 (4.8.2)
Qt Version: 4.8.1
Operating System: Linux 3.0.0-17-generic i686
Distribution: Ubuntu 11.10

-- Information about the crash:
- What I was doing when the application crashed:
Right after saving the database I opened form generator, then closed the file without saving it.

-- Backtrace:
Application: Kexi (kexi), signal: Segmentation fault
[Current thread is 1 (Thread 0xb7711720 (LWP 10606))]

Thread 3 (Thread 0xb2ee0b70 (LWP 10613)):
#0  0x00da1d10 in clock_gettime () from /lib/i386-linux-gnu/librt.so.1
#1  0x008713a5 in do_gettime (frac=0xb2edfff0, sec=0xb2edffe8) at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0x0095b3d6 in QTimerInfoList::updateCurrentTime (this=0x876a934) at kernel/qeventdispatcher_unix.cpp:343
#4  0x0095b72a in QTimerInfoList::timerWait (this=0x876a934, tm=...) at kernel/qeventdispatcher_unix.cpp:450
#5  0x00959f43 in timerSourcePrepareHelper (src=<optimized out>, timeout=0xb2ee00fc) at kernel/qeventdispatcher_glib.cpp:136
#6  0x00959fdd in timerSourcePrepare (source=0x876a900, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0x04f3988c in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#8  0x04f3a637 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#9  0x04f3ac2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#10 0x0095aa97 in QEventDispatcherGlib::processEvents (this=0x85a9900, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#11 0x009265ed in QEventLoop::processEvents (this=0xb2ee0290, flags=...) at kernel/qeventloop.cpp:149
#12 0x00926889 in QEventLoop::exec (this=0xb2ee0290, flags=...) at kernel/qeventloop.cpp:204
#13 0x0080f9dc in QThread::exec (this=0x87c0a68) at thread/qthread.cpp:501
#14 0x00903b5d in QInotifyFileSystemWatcherEngine::run (this=0x87c0a68) at io/qfilesystemwatcher_inotify.cpp:248
#15 0x00812e70 in QThreadPrivate::start (arg=0x87c0a68) at thread/qthread_unix.cpp:298
#16 0x0077ed31 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#17 0x001e346e in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 2 (Thread 0xb26dfb70 (LWP 10614)):
#0  0x00da1d10 in clock_gettime () from /lib/i386-linux-gnu/librt.so.1
#1  0x008713a5 in do_gettime (frac=0xb26deff0, sec=0xb26defe8) at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0x0095b3d6 in QTimerInfoList::updateCurrentTime (this=0x8ac6d74) at kernel/qeventdispatcher_unix.cpp:343
#4  0x0095b72a in QTimerInfoList::timerWait (this=0x8ac6d74, tm=...) at kernel/qeventdispatcher_unix.cpp:450
#5  0x00959f43 in timerSourcePrepareHelper (src=<optimized out>, timeout=0xb26df0fc) at kernel/qeventdispatcher_glib.cpp:136
#6  0x00959fdd in timerSourcePrepare (source=0x8ac6d40, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0x04f3988c in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#8  0x04f3a637 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#9  0x04f3ac2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#10 0x0095aa97 in QEventDispatcherGlib::processEvents (this=0x8ac6ed0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#11 0x009265ed in QEventLoop::processEvents (this=0xb26df290, flags=...) at kernel/qeventloop.cpp:149
#12 0x00926889 in QEventLoop::exec (this=0xb26df290, flags=...) at kernel/qeventloop.cpp:204
#13 0x0080f9dc in QThread::exec (this=0x8aa1570) at thread/qthread.cpp:501
#14 0x00903b5d in QInotifyFileSystemWatcherEngine::run (this=0x8aa1570) at io/qfilesystemwatcher_inotify.cpp:248
#15 0x00812e70 in QThreadPrivate::start (arg=0x8aa1570) at thread/qthread_unix.cpp:298
#16 0x0077ed31 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#17 0x001e346e in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 1 (Thread 0xb7711720 (LWP 10606)):
[KCrash Handler]
#7  0x05141458 in KexiDataSourcePage::~KexiDataSourcePage() () from /usr/lib/libkexiformutils.so.9
#8  0x05141512 in KexiDataSourcePage::~KexiDataSourcePage() () from /usr/lib/libkexiformutils.so.9
#9  0x0514359d in KexiFormPart::~KexiFormPart() () from /usr/lib/libkexiformutils.so.9
#10 0x05143602 in KexiFormPart::~KexiFormPart() () from /usr/lib/libkexiformutils.so.9
#11 0x0093cdf1 in QObjectPrivate::deleteChildren (this=0x8513bc8) at kernel/qobject.cpp:1908
#12 0x00942561 in QObject::~QObject (this=0x84ce5a4, __in_chrg=<optimized out>) at kernel/qobject.cpp:927
#13 0x0071a145 in KexiPart::Manager::~Manager() () from /usr/lib/libkexicore.so.9
#14 0x006f668d in ?? () from /usr/lib/libkexicore.so.9
#15 0x006f9fa9 in ?? () from /usr/lib/libkexicore.so.9
#16 0x00142981 in ?? () from /lib/i386-linux-gnu/libc.so.6
#17 0x00142a0d in exit () from /lib/i386-linux-gnu/libc.so.6
#18 0x0012911b in __libc_start_main () from /lib/i386-linux-gnu/libc.so.6
#19 0x08048725 in _start ()

Possible duplicates by query: bug 298855.

Reported using DrKonqi
Comment 1 Jarosław Staniek 2012-05-06 19:03:24 UTC
Hi, thanks for the report.
Could you please rephrase this description a bit? 
"Right after saving the database I opened form generator, then closed the file without saving it. "

Did you close the whole kexi app and it crashed or you closed the form? 
Let's fix the summary; 'Kexi crashes' is not enough specific, thus makes our work harder.
Comment 2 Jarosław Staniek 2012-05-06 19:04:31 UTC
If you are able to repeat this crash, please consider sending me a test database file that crashes.
Comment 3 Donatas Glodenis 2012-05-08 19:15:42 UTC
Created attachment 70965 [details]
New crash information added by DrKonqi

kexi (2.4.0 (Calligra 2.4.0)) on KDE Platform 4.8.2 (4.8.2) using Qt 4.8.1

- What I was doing when the application crashed:

I opened the only form in the database, rearranged something, and then saved it, and then pushed the close button, and confirmed, that I want to save the document. I will attach the database I was working on later on.

-- Backtrace (Reduced):
#7  0x0456b45a in KexiDataSourcePage::~KexiDataSourcePage() () from /usr/lib/libkexiformutils.so.9
#8  0x0456b512 in KexiDataSourcePage::~KexiDataSourcePage() () from /usr/lib/libkexiformutils.so.9
#9  0x0456d59d in KexiFormPart::~KexiFormPart() () from /usr/lib/libkexiformutils.so.9
#10 0x0456d602 in KexiFormPart::~KexiFormPart() () from /usr/lib/libkexiformutils.so.9
#11 0x008a9df1 in QObjectPrivate::deleteChildren (this=0x83414f8) at kernel/qobject.cpp:1908
Comment 4 Donatas Glodenis 2012-05-08 19:25:06 UTC
Created attachment 70966 [details]
The database that I was working on when the second crash happened.

The crash I reported first happened when I was working on a completely new database. After the crash the database remained empty. When I, at your request, tried to reproduce the crash, I could not. But then I added things to the database, and Kexi crashed at the circumstances I reported in the "duplicate" bug report. 

This time I could reproduce the crash - I repeated the sequence and the database crashed again. I also changed the sequence a bit - instead of editing the design of the form I edited the query, then saved the file and closed it - Kexi crashed again.

Sorry, I cannot exactly tell why the crash happened, so any change in the name of the bug report would be a speculation on my side.

If you need debug infor for all the possible crashes, I could attach that as well.
Comment 5 Donatas Glodenis 2012-05-08 19:28:58 UTC
(In reply to comment #1)
> Hi, thanks for the report.
> Could you please rephrase this description a bit? 
> "Right after saving the database I opened form generator, then closed the
> file without saving it. "
> 
> Did you close the whole kexi app and it crashed or you closed the form? 

I closed the whole kexi app.

> Let's fix the summary; 'Kexi crashes' is not enough specific, thus makes our
> work harder.

I do not have any good ideas about that. "Kexi crashes after editing, saving and closing"?
Comment 6 Jarosław Staniek 2012-05-24 20:10:15 UTC
*** Bug 300570 has been marked as a duplicate of this bug. ***
Comment 7 Jarosław Staniek 2012-08-23 22:18:48 UTC
*** Bug 302280 has been marked as a duplicate of this bug. ***
Comment 8 Jarosław Staniek 2012-08-23 22:20:11 UTC
*** Bug 305605 has been marked as a duplicate of this bug. ***
Comment 9 Jarosław Staniek 2012-08-25 21:51:26 UTC
*** Bug 305753 has been marked as a duplicate of this bug. ***
Comment 10 Jarosław Staniek 2012-09-01 21:47:46 UTC
*** Bug 306140 has been marked as a duplicate of this bug. ***
Comment 11 Jarosław Staniek 2012-09-21 22:04:27 UTC
Git commit 73437d8d7f0401bf132b0fcbc7cbc21caaf3d811 by Jaroslaw Staniek.
Committed on 21/09/2012 at 23:47.
Pushed by staniek into branch 'calligra/2.5'.

Main Window: Fix crashes on Kexi closing
FIXED-IN:2.5.3

M  +28   -11   kexi/core/kexi.cpp
M  +1    -1    kexi/core/kexi.h
M  +0    -4    kexi/main.cpp
M  +2    -10   kexi/main/KexiMainWindow.cpp

http://commits.kde.org/calligra/73437d8d7f0401bf132b0fcbc7cbc21caaf3d811
Comment 12 Jarosław Staniek 2012-09-21 22:05:09 UTC
Git commit 1180e91ba6dccec136a321098f3db4a4764b5a38 by Jaroslaw Staniek.
Committed on 21/09/2012 at 23:47.
Pushed by staniek into branch 'master'.

Main Window: Fix crashes on Kexi closing
FIXED-IN:2.5.3

M  +28   -11   kexi/core/kexi.cpp
M  +1    -1    kexi/core/kexi.h
M  +0    -4    kexi/main.cpp
M  +2    -10   kexi/main/KexiMainWindow.cpp

http://commits.kde.org/calligra/1180e91ba6dccec136a321098f3db4a4764b5a38
Comment 13 Jarosław Staniek 2012-09-21 22:07:05 UTC
*** Bug 298855 has been marked as a duplicate of this bug. ***
Comment 14 Jarosław Staniek 2012-09-27 21:08:33 UTC
*** Bug 307489 has been marked as a duplicate of this bug. ***
Comment 15 Jarosław Staniek 2012-10-04 23:44:48 UTC
Git commit dbe938039a08dec5ce10aaa551beb8942ac3b5a7 by Jaroslaw Staniek.
Committed on 21/09/2012 at 23:47.
Pushed by staniek into branch 'kexi-altertable-staniek'.

Main Window: Fix crashes on Kexi closing
FIXED-IN:2.5.3

M  +28   -11   kexi/core/kexi.cpp
M  +1    -1    kexi/core/kexi.h
M  +0    -4    kexi/main.cpp
M  +2    -10   kexi/main/KexiMainWindow.cpp

http://commits.kde.org/calligra/dbe938039a08dec5ce10aaa551beb8942ac3b5a7
Comment 16 Jarosław Staniek 2012-12-06 23:53:21 UTC
*** Bug 311278 has been marked as a duplicate of this bug. ***
Comment 17 vajs.vajs 2012-12-13 16:38:53 UTC
Created attachment 75814 [details]
New crash information added by DrKonqi

kexi (2.5.3 (Calligra 2.5.3)) on KDE Platform 4.9.3 using Qt 4.8.3

- What I was doing when the application crashed:
Opened Kexi, created new database, created new table, added two fields, saved changes, created new form, then I tried to exit, "would you like to save?" "No", application exited and then "application crashed"

-- Backtrace (Reduced):
#7  0xa9b38cb8 in KexiDataSourcePage::~KexiDataSourcePage() () from /usr/lib/libkexiformutils.so.10
#8  0xa9b38d72 in KexiDataSourcePage::~KexiDataSourcePage() () from /usr/lib/libkexiformutils.so.10
#9  0xa9b3c71d in KexiFormPart::~KexiFormPart() () from /usr/lib/libkexiformutils.so.10
#10 0xa9b3c782 in KexiFormPart::~KexiFormPart() () from /usr/lib/libkexiformutils.so.10
#11 0xb66ffa59 in QObjectPrivate::deleteChildren (this=this@entry=0x9778520) at kernel/qobject.cpp:1908
Comment 18 Jarosław Staniek 2013-03-10 09:47:35 UTC
*** Bug 316445 has been marked as a duplicate of this bug. ***