Main Window: Fix crashes on Kexi closing

BUG:299484
FIXED-IN:2.5.3