kexi/main/KexiMainWindow.cpp
@@ -237,12 +237,6 @@ void KexiMainWindowTabWidget::setTabIndexFromContextMenu(int clickedIndex)
 //-------------------------------------------------
 
 //static
-/*KexiMainWindow* KexiMainWindow::self()
-{
-  return kexiMainWindow;
-}*/
-
-//static
 int KexiMainWindow::create(int argc, char *argv[], const KexiAboutData &aboutData)
 {
     Kexi::initCmdLineArgs(argc, argv, aboutData);
@@ -278,10 +272,6 @@ int KexiMainWindow::create(int argc, char *argv[], const KexiAboutData &aboutDat
             debugWindow->show();
         }
     }
-#endif
-
-#ifndef KEXI_MOBILE
-    //QApplication::setMainWidget(win);
 #endif
 
     if (true != win->startup()) {
@@ -366,6 +356,7 @@ KexiMainWindow::~KexiMainWindow()
     d->forceWindowClosing = true;
     closeProject();
     delete d;
+    Kexi::deleteGlobalObjects();
 }
 
 KexiProject *KexiMainWindow::project()
@@ -2127,6 +2118,7 @@ bool KexiMainWindow::queryClose()
         storeSettings();
 
     if (! ~res) {
+        Kexi::deleteGlobalObjects();
         qApp->quit();
     }
     return ! ~res;
